<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, TestAndroidActivity!</string>
    <string name="app_name">iCall</string>
    <string name="app_describe">非常感谢您们的支持！我们共同学习！                     网址：http://www.thinkandroid.cn。qq群：169415162</string>
    <!-- activity标题 -->
    <string name="thinkandroid_main_title">ThinkAndroid Main</string>
    <string name="thinkandroid_db_title">ThinkAndroid 数据库操作模块</string>
    <string name="thinkandroid_cache_title">ThinkAndroid 缓存模块</string>
    <string name="thinkandroid_image_cache_title">ThinkAndroid 图片缓存模块</string>
    <string name="thinkandroid_mvc_title">ThinkAndroid MVC模块</string>
    <string name="thinkandroid_http_title">ThinkAndroid Http模块</string>
    <string name="thinkandroid_download_title">ThinkAndroid 下载器模块模块</string>
    <string name="thinkandroid_simple_download_title">ThinkAndroid 第一种简单模块模块</string>
    <string name="thinkandroid_simple_two_download_title">ThinkAndroid 第二种简单模块模块</string>
    <string name="thinkandroid_test_other_title">几个简单的工具</string>
    <!-- thinkandroid_main -->
    <string name="test_db">数据库模块</string>
    <string name="test_cache">缓存模块</string>
    <string name="test_image_cache">图片缓存模块</string>
    <string name="test_mvc">MVC模块</string>
    <string name="test_http">http模块</string>
    <string name="test_download">下载器模块</string>
    <string name="test_other">测试其他工具</string>
    <string name="exit_app">退出应用程序</string>

    <!-- thinkandroiddb -->
    <string name="insert_data">插入数据</string>
    <string name="delete_data">删除数据</string>
    <string name="update_data">更新数据</string>
    <string name="select_data">查询数据</string>
    <string name="show_data">显示数据</string>
    <!-- test_simple_down -->
    <string name="test_simple_down">单线程 简单下载器之一</string>
    <string name="test_simple_down_two">单线程 简单下载器之二</string>
    <string name="test_multi_thread_down">多线程下载</string>

    <!-- thinkandroidother -->
    <string name="test_configure">测试配置器</string>
    <string name="test_resoperate">测试资源读取</string>
    <string name="test_comparator">测试任意对象比较器</string>


    <string name="ak_login_protocol_scheme">ak964234977027033</string>
    <string name="app_id">197397761131559</string>

    <!--cffab7d11cd2cbf9ee5f82c140bcfcfa-->
    <!--4ca84018610e6011c64f23689b1039d6-->
    <string name="client_token">4ca84018610e6011c64f23689b1039d6</string>

    <string name="permissions_get_accounts_title">Read Email Address</string>
    <string name="permissions_read_phone_state_message">
        Grant permission to read your phone number from your device to pre-fill.
    </string>
    <string name="permissions_get_accounts_message">
        Grant permission to read your email address from your device to pre-fill.
    </string>
    <string name="permissions_read_phone_state_title">Read Phone Number</string>
    <string name="permissions_receive_sms_message">
        Grant permission to read your SMS code from your device to pre-fill.
    </string>
    <string name="permissions_receive_sms_title">Read SMS Code</string>
    <string name="na">NA</string>
    <string name="log_in_email_button">Log In via Email</string>
    <string name="log_in_phone_button">Log In via Phone</string>
    <string name="log_out_button">Log Out</string>
    <string name="error_label">Error</string>
    <string name="loading_placeholder">Loading&#8230;</string>
    <string name="user_id_label">Account ID</string>
    <string name="phone_number_label">Phone Number</string>
    <string name="email_label">Email</string>


    <string name="send_code">SEND CODE</string>
    <string name="input_code_desc">Please input code below</string>

    <string name="signin">SIGN IN</string>
    <string name="signin_desc">You will get SMS with a confirmation</string>
    <string name="signin_code_desc">code to this number</string>

    <string name="your_number">Your number</string>
    <string name="password">password</string>
    <string name="new_user">I am new user</string>

    <string name="forgot_password">Forgot password?</string>
    <string name="verify_code_login">Sign in with verify code</string>
    <string name="agree_use_desc">Agree our Terms of use and Privacy Policy</string>

    <!-- 导航条 -->
    <string name="a_to_z_JH">#</string>
    <string name="a_to_z_A">A</string>
    <string name="a_to_z_B">B</string>
    <string name="a_to_z_C">C</string>
    <string name="a_to_z_D">D</string>
    <string name="a_to_z_E">E</string>
    <string name="a_to_z_F">F</string>
    <string name="a_to_z_G">G</string>
    <string name="a_to_z_H">H</string>
    <string name="a_to_z_I">I</string>
    <string name="a_to_z_J">J</string>
    <string name="a_to_z_K">K</string>
    <string name="a_to_z_L">L</string>
    <string name="a_to_z_M">M</string>
    <string name="a_to_z_N">N</string>
    <string name="a_to_z_O">O</string>
    <string name="a_to_z_P">P</string>
    <string name="a_to_z_Q">Q</string>
    <string name="a_to_z_R">R</string>
    <string name="a_to_z_S">S</string>
    <string name="a_to_z_T">T</string>
    <string name="a_to_z_U">U</string>
    <string name="a_to_z_V">V</string>
    <string name="a_to_z_W">W</string>
    <string name="a_to_z_X">X</string>
    <string name="a_to_z_Y">Y</string>
    <string name="a_to_z_Z">Z</string>
    <string name="search">Search</string>
    <string name="select_code">Select Country or Areas</string>

    <string name="calls">Calls</string>
    <string name="discover">Discover</string>
    <string name="mycredits">Mycredits</string>
    <string name="my_credits_">My credits:</string>

    <string name="get_more">Get More</string>
    <string name="recents">Recents</string>
    <string name="contacts">Contacts</string>
    <string name="unkonwn_phone">unkonwn</string>

    <string name="yesterday">yesterday</string>
    <string name="today">today</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>


    <string name="rate">Rate</string>
    <string name="my_credits">My Credits</string>
    <string name="rest_duration">Rest Duration</string>
    <string name="minute">Minute</string>
    <string name="credits">Credits</string>
    <string name="credits_">Credits:</string>

    <string name="keyboard">Keyboard</string>
    <string name="speaker">Speaker</string>
    <string name="mute">Mute</string>
    <string name="callend">Call End</string>

    <string name="cost_">cost:</string>
    <string name="save_">save:</string>

    <string name="hot">Hot</string>
    <string name="funny">Funny</string>
    <string name="girls">Girls</string>
    <string name="delete_all_history">Delete all history</string>



    <string name="credits_help">How to get credits</string>
    <string name="query_rates">Query call rates</string>
    <string name="promotion_code">Promotion code</string>
    <string name="feed_back">Feed back</string>
    <string name="rate_us">Rate us</string>
    <string name="logout">Logout</string>
</resources>