<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:line="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg_color">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="179dp"
        android:background="@drawable/login_top_bg"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp">
        <ImageView
            android:id="@+id/login_logo_iv"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:src="@drawable/login_logo"
            android:layout_centerHorizontal="true"/>

        <LinearLayout
            android:id="@+id/login_main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_logo_iv"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/login_input_bg"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:text="@string/signin"
                android:textColor="#59B553"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center_horizontal"
                android:text="@string/signin_desc"
                android:textColor="#B4B4B4"
                android:textSize="10sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/signin_code_desc"
                android:textColor="#B4B4B4"
                android:textSize="10sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/your_number"
                android:textColor="#9B9B9B"
                android:layout_marginLeft="10dp"
                android:textSize="14sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:id="@+id/login_country_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:src="@drawable/flag_cn"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:textColor="#5995D9"
                        android:textSize="14sp"
                        android:text="+86"/>
                </LinearLayout>
                <EditText
                    android:id="@+id/login_phone_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:layout_marginLeft="5dp"
                    android:background="@android:color/transparent"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#8B8B8B">
            </View>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/password"
                android:textColor="#9B9B9B"
                android:layout_marginLeft="10dp"
                android:textSize="14sp" />

            <com.icall.free.views.LineEditText
                android:id="@+id/login_password_edit"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                line:lineColorEt="#8B8B8B"
                android:maxLines="1"
                android:inputType="textPassword"
                android:background="@android:color/transparent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/login_register_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/new_user"
                    android:textColor="#9B9B9B"
                    android:layout_marginLeft="10dp"
                    android:textSize="14sp" />
                <TextView
                    android:id="@+id/login_forgot_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:layout_marginRight="10dp"
                    android:text="@string/forgot_password"
                    android:textColor="#9B9B9B"
                    android:layout_marginLeft="10dp"
                    android:textSize="14sp" />
            </LinearLayout>

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/signin"
                android:background="@drawable/button_bg"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/login_code_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/verify_code_login"
                android:textColor="#5995D9"
                android:layout_marginLeft="10dp"
                android:textSize="14sp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@android:color/transparent">
            </View>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_below="@id/login_main_layout"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/login_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:button="@drawable/checkbox_bg"
                android:checked="true"
                android:padding="5dp"
                android:text="@string/agree_use_desc"
                android:textColor="#9B9B9B"
                android:textSize="12dp" />
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>
