<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:line="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg_color">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="179dp"
        android:background="@drawable/login_top_bg"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp">
        <ImageView
            android:id="@+id/login_logo_iv"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:src="@drawable/login_logo"
            android:layout_centerHorizontal="true"/>

        <LinearLayout
            android:id="@+id/login_main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_logo_iv"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/login_input_bg"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:text="@string/signin"
                android:textColor="#59B553"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center_horizontal"
                android:text="@string/signin_desc"
                android:textColor="#B4B4B4"
                android:textSize="10sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/signin_code_desc"
                android:textColor="#B4B4B4"
                android:textSize="10sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/your_number"
                android:textColor="#9B9B9B"
                android:layout_marginLeft="10dp"
                android:textSize="14sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:id="@+id/register_country_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:src="@drawable/flag_cn"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:textColor="#5995D9"
                        android:textSize="14sp"
                        android:text="+86"/>
                </LinearLayout>
                <EditText
                    android:id="@+id/register_phone_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLines="1"
                    android:maxLength="20"
                    android:inputType="number"
                    android:layout_marginLeft="5dp"
                    android:background="@android:color/transparent"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#8B8B8B">
            </View>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/input_code_desc"
                android:textColor="#9B9B9B"
                android:layout_marginLeft="10dp"
                android:textSize="14sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:orientation="horizontal">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <View
                            android:id="@+id/register_codeV_1"
                            android:layout_width="match_parent"
                            android:layout_height="0.2dp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="18dp"
                            android:layout_marginRight="18dp"
                            android:background="#8B8B8B"/>
                        <TextView
                            android:id="@+id/register_codeT_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textSize="30sp"
                            android:textColor="@android:color/black"
                            android:visibility="gone"/>
                    </FrameLayout>
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <View
                            android:id="@+id/register_codeV_2"
                            android:layout_width="match_parent"
                            android:layout_height="0.2dp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="18dp"
                            android:layout_marginRight="18dp"
                            android:background="#8B8B8B"/>
                        <TextView
                            android:id="@+id/register_codeT_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textSize="30sp"
                            android:textColor="@android:color/black"
                            android:visibility="gone"/>
                    </FrameLayout>
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <View
                            android:id="@+id/register_codeV_3"
                            android:layout_width="match_parent"
                            android:layout_height="0.2dp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="18dp"
                            android:layout_marginRight="18dp"
                            android:background="#8B8B8B"/>
                        <TextView
                            android:id="@+id/register_codeT_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textSize="30sp"
                            android:textColor="@android:color/black"
                            android:visibility="gone"/>
                    </FrameLayout>
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <View
                            android:id="@+id/register_codeV_4"
                            android:layout_width="match_parent"
                            android:layout_height="0.2dp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="18dp"
                            android:layout_marginRight="18dp"
                            android:background="#8B8B8B"/>
                        <TextView
                            android:id="@+id/register_codeT_4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textSize="30sp"
                            android:textColor="@android:color/black"
                            android:visibility="gone"/>
                    </FrameLayout>
                </LinearLayout>
                <EditText
                    android:id="@+id/register_code_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:maxLength="4"
                    android:visibility="visible"
                    android:background="@android:color/transparent"/>
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/new_user"
                    android:textColor="#9B9B9B"
                    android:layout_marginLeft="10dp"
                    android:textSize="14sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/forgot_password"
                    android:textColor="#9B9B9B"
                    android:layout_marginLeft="10dp"
                    android:textSize="14sp" />
            </LinearLayout>

            <Button
                android:id="@+id/register_btn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/send_code"
                android:background="@drawable/button_bg"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/verify_code_login"
                android:textColor="#5995D9"
                android:layout_marginLeft="10dp"
                android:visibility="gone"
                android:textSize="14sp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@android:color/transparent">
            </View>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_below="@id/login_main_layout"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/register_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:button="@drawable/checkbox_bg"
                android:checked="true"
                android:padding="5dp"
                android:text="@string/agree_use_desc"
                android:textColor="#9B9B9B"
                android:textSize="12dp" />
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>
